# SysProgTasks

./: README.md  zombie.c
Processes/: main  main.c  main_backup.c
Task1/: README
Task1/project/: compile.sh  one-cmd-compile.sh
Task1/project/output/: m1.s  m2.s  main
Task2/: README
Task2/project/: Makefile
Task2/project/output/: m1.s  m2.s  main
Task2/project/src/m1/: m1.c
Task2/project/src/m2/: m2.c
Task3/: README
Task3/project/: Makefile  Makefile.am  Makefile.in  autotools_cmds.sh  config.h  config.status  configure  configure.ac  configure.scan
Task3/project/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
Task3/project/output/: Makefile  Makefile.am  Makefile.in  config.status  mainapp
Task3/project/output/output/: Makefile
Task3/project/output/src/m1/.deps/: m1.Po
Task3/project/output/src/m2/.deps/: m2.Po
Task3/project/src/m1/.deps/: m1.Po
Task3/project/src/m2/.deps/: m2.Po
Threads/: README.md  condvar  condvar.c  spin-condvar.c  spin_condvar  thread  thread-pid  thread-pid.c  thread.c  thread_backup.c  thread_single  thread_single.c
